--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,107 +1,28 @@
-* {
-    margin-top: 0;
-    padding: 0;
-}
-
-body {
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 0.7em;
-    color: #000;
-    /* background-color: rgb(0, 151, 211); */
-    background-color: white;
-}
-
-img {
-    border: 0;
-    margin-top: -5px;
-}
-
+/* 
 ul {
     list-style-type: none;
-}
+} */
 
 fieldset {
     border: 0;
 }
 
-#top_left {
-    float: left;
-    width: 50%;
+#logo {
+    margin-top: -5px;
+    margin-left: 10px;
 }
 
-#top_left h1 {
-    margin-left: 20px;
-    height: 0px;
-    font-size: 2.3em;
-    font-weight: normal;
-}
-
-#top_left h1 a:link,
-#top_left h1 a:active,
-#top_left h1 a:visited {
-    color: #000;
-    text-decoration: none;
-}
-
-#top_left h1 a:hover {
-    color: #6e7475;
-}
+#logo img {}
 
 #top_right {
-    float: right;
-    width: 30%;
+    width: 40%;
     padding: 0px 20px;
     height: 65px;
-    text-align: right;
     background-color: #ebebeb;
-    position: relative;
-    left: 13px;
-    display: flex;
-    justify-content: space-evenly;
 }
 
-#top_right p {
-    margin-top: 18px;
-    margin-right: 15px;
-}
-
-#top_right p a:link,
-#top_right p a:active,
-#top_right p a:visited {
-    color: #6e7475;
-    text-decoration: none;
-}
-
-#top_right p a:hover {
-    text-decoration: underline;
-}
-
-
-/**********New design**********/
-
-.ok {
-    background-color: rgb(99, 197, 0);
-    color: white;
-}
-
-.warning {
-    background-color: yellow;
-    color: green;
-}
-
-.critical {
-    background-color: red;
-    color: white;
-}
-
-.unknown {
-    background-color: violet;
-    color: white;
-}
-
-.major {
-    background-color: orange;
-    color: white;
+#top_right table {
+    margin: auto;
 }
 
 td {
@@ -110,11 +31,7 @@ td {
     font-size: 12px;
     width: 15px;
     text-align: center;
-}
-
-table {
-    position: relative;
-    top: 5px;
+    cursor: default;
 }
 
 table img {
@@ -122,34 +39,144 @@ table img {
 }
 
 
-/* table th {
-    color: rgb(0, 151, 211);
-} */
-
-
-/*######################## GRID ############################*/
+/******************** GRID ***************/
 
 .grid-container {
     display: grid;
-    grid-template: 'top top' 65px 'sidebar main' 1fr / 250px 1fr;
+    grid-template: 'top top' 65px 'sidebar main' 1fr / auto 1fr;
 }
 
 .top {
     width: 99%;
+    height: 65px;
     background-color: rgb(0, 151, 211);
     grid-area: top;
 }
 
 .sidebar {
     background-color: rgb(236, 235, 235);
-    width: 250px;
+    width: 220px;
     height: 89vh;
     grid-area: sidebar;
     overflow: auto;
+    transition-duration: .5s;
+    position: relative;
 }
 
 .main {
     grid-area: main;
     height: 89vh;
     overflow: auto;
+    position: relative;
+}
+
+
+/****** Redesign Scrollbar ******/
+
+::-webkit-scrollbar {
+    width: 8px;
+    background: white;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(194, 194, 194, 0.808);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(187, 187, 187);
+}
+
+.description {
+    width: 40%;
+}
+
+
+/******************* Chart ***************/
+
+.chart {
+    margin: 10px 0px;
+    /* background-color: rgba(236, 236, 236, 0.767); */
+    border: 1px solid rgb(0, 151, 211);
+    padding: 10px;
+}
+
+.chart div {
+    width: 500px;
+    padding: 10px;
+}
+
+.chart h6 {
+    text-align: center;
+}
+
+
+/***************** Map *******************/
+
+.network {
+    display: block;
+    width: 100%;
+    height: 89vh;
+    background-color: white;
+}
+
+
+/***************** Carte ******************/
+
+.mapsvg {
+    width: 40%;
+    margin: 30px auto;
+}
+
+.mapsvg path {
+    fill: rgb(82, 169, 250);
+    stroke-width: 1px;
+    stroke: white;
+    /* transition: .2s; */
+}
+
+
+/* .mapsvg path:hover {
+    fill: rgb(0, 132, 255);
+} */
+
+.city {
+    cursor: pointer;
+    fill: rgb(206, 1, 1);
+    stroke: #ffffff;
+    fill-opacity: 1;
+    stroke-width: 1;
+    stroke-opacity: 1;
+    transition-duration: .5s;
+}
+
+.city:hover {
+    r: 15;
+}
+
+.tool {
+    width: 400px;
+    height: 200px;
+    /* border: 2px solid rgb(0, 151, 211); */
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 0 0 15px grey;
+    position: absolute;
+    top: 15%;
+    left: 55%;
+    visibility: hidden;
+    padding: 10px;
+    transition-duration: .2s;
+}
+
+.tool::before {
+    content: '';
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-right: 20px solid white;
+    top: 7px;
+    left: -20px;
+    z-index: 0;
 }
