--- a/public/css/users.css
+++ b/public/css/users.css
@@ -40,3 +40,11 @@ input:checked[type="checkbox"]:before {
 input:hover[type="checkbox"]:before {
     background: rgb(240, 240, 240);
 }
+
+
+/* #d-popup {
+    position: absolute;
+    background: blue;
+    top: 20%;
+    left: 35%;
+} */
