--- a/public/css/common.css
+++ b/public/css/common.css
@@ -154,8 +154,7 @@ table img {
 }
 
 .tool {
-    width: 400px;
-    height: 200px;
+    width: 420px;
     /* border: 2px solid rgb(0, 151, 211); */
     border-radius: 5px;
     background-color: white;
@@ -166,6 +165,14 @@ table img {
     visibility: hidden;
     padding: 10px;
     transition-duration: .2s;
+}
+
+.casablanca {
+    fill: rgb(1, 184, 1);
+}
+
+.rabat {
+    fill: rgb(1, 184, 1);
 }
 
 .tool::before {
