--- a/public/css/users.css
+++ b/public/css/users.css
@@ -45,7 +45,7 @@ input:hover[type="checkbox"]:before {
     display: none;
     width: 350px;
     position: absolute;
-    top: 40%;
+    top: 20%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%);
 }
