--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -145,7 +145,7 @@ a {
 }
 
 .submenuItems li {
-    border-bottom: 1px solid #B6B6B6;
+    /* border-bottom: 1px solid #B6B6B6; */
     font-weight: bold;
 }
 
