--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1633,7 +1633,8 @@ pre code {
 }
 
 .table-striped tbody tr:nth-of-type(odd) {
-    background-color: rgba(0, 0, 0, 0.05);
+    /* background-color: rgba(0, 0, 0, 0.05); */
+    background-color: rgba(115, 115, 115, 0.05);
 }
 
 .table-hover tbody tr:hover {
