--- a/public/css/common.css
+++ b/public/css/common.css
@@ -110,7 +110,8 @@ table img {
 .chart {
     margin: 10px 0px;
     /* background-color: rgba(236, 236, 236, 0.767); */
-    border: 1px solid rgb(0, 151, 211);
+    /* border: 1px solid rgb(0, 151, 211); */
+    border: 1px solid #6c757d48;
     padding: 10px;
 }
 
